Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanBooleanField.quorum
class Main
    boolean b
    boolean bool
    action Main
        b = true
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end