Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanInteger.quorum
class Main
    action Main
        boolean bool
        bool = cast(boolean, 5)
    end
end